--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>♡CUBSPORT♡</title>
+    <title>CUBSPORT♡</title>
     <link rel="stylesheet" href="https://use.typekit.net/yik5nqu.css">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/nothardworker/miwon/master/pavi.ico">
   </head>
@@ -14,7 +14,7 @@
 
 <div class="content">
   <div class="pin1">
-    <h2>CUBSPORT</h2>
+    <a href="www.cubsport.com"><h2>WWW.CUBSPORT.COM</h2></a>
   </div>
   <div class="pin2">
     <a href="https://www.instagram.com/cubsport/">
@@ -23,7 +23,7 @@
   </div>
   </div>
   <div class="content2">
-      <img src="1.png" alt="" width="70%">
+      <img src="1.png" alt="">
       <img src="album.gif" alt=""> <br><br><br> <br>
       <img src="con2.png" alt="" width="100%">
       <a href="https://youtu.be/cEVx-GX8pE4">
@@ -40,10 +40,18 @@
         <a href="https://music.bugs.co.kr/search/integrated?q=cubsport"><img src="play2.png" alt="">
         </a>
     </div>
+    <br><br><br><br><br><br>
 
 
     <div class="pin1 content">
       <h2>Designed by LEE MIWON</h2>
+    </div>
+
+    <div class="follow3">
+      <a href="mailto:2021miwon@gmail.com">
+        <img src="follow.png"
+        onmouseover="this.src='follow.gif'"
+        onmouseout="this.src='follow.png'">
     </div>
 
   </body>
