--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <div class="pin2">
     <a href="https://www.instagram.com/cubsport/">
-      <img src="insta.png" alt="" width="30px">
+      <img src="insta.png" alt="" width="50px">
     </a>
   </div>
   </div>
@@ -31,12 +31,12 @@
       </a>
     </div>
     <div class="content3">
-      <img src="poster.gif" alt="">
+      <img src="poster.gif" alt="" width="1000px">
       <img src="poster1.png" alt="">
     </div>
 
     <div class="content2">
-        <img src="play.png" alt="" width="70%">
+        <img src="play.png" alt="" width="66%">
         <a href="https://music.bugs.co.kr/search/integrated?q=cubsport"><img src="play2.png" alt="">
         </a>
     </div>
