--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       <img src="album.gif" alt=""> <br><br><br> <br>
       <img src="con2.png" alt="" width="100%">
       <a href="https://youtu.be/cEVx-GX8pE4">
-        <img src="ticket3.png" alt="" width="500px">
+        <div class="ticket">
+          <img src="ticket3.png" alt="" >
+        </div>
       </a>
     </div>
     <div class="content3">
